# InputLatencyOptimizer

./: CMakeLists.txt
.github/workflows/: build-cto.yml
assets/: app.rc
docs/: BUILD_INSTRUCTIONS.md
include/: AutoStartManager.h  ConfigStore.h  DeviceTuner.h  InputThread.h  LatencyMeasurer.h  Resource.h  RingBuffer.h  SettingsDialog.h  TrayIcon.h
src/: AutoStartManager.cpp  ConfigStore.cpp  DeviceTuner.cpp  InputThread.cpp  LatencyMeasurer.cpp  RingBuffer.cpp  SettingsDialog.cpp  TrayIcon.cpp  main.cpp
